<resources>

    <string name="app_name">Better Twitch Following List</string>

    <!-- Tabs -->
    <string name="following_tab">Following</string>
    <string name="top_tab">Top</string>

    <!-- Toast messages -->
    <string name="message_invalid_username">Invalid username</string>
    <string name="message_network_error">Network error</string>
    <string name="message_server_error">Twitch server error</string>
    <string name="message_too_many_follows">Max list size is 2500 due to Twitch API limits</string>
    <string name="message_rate_limit">Twitch API limit hit, data may be incomplete for now</string>
    <string name="message_username_change">Your list will be fetched in a moment</string>

    <!-- Following list -->
    <!-- contentDescription for the pin icon -->
    <string name="pin_icon">Channel pin icon</string>
    <string name="offline">Offline</string>
    <string name="vodcast_tag">rerun</string>
    <!-- Counter text -->
    <string name="counter_text_format">%1$d/%2$d Online</string>

    <!-- Starting message -->
    <!-- This line is displayed in large, purple text -->
    <string name="get_started_message_main">There\'s nothing here!</string>
    <!-- This message is displayed in smaller text below the main one -->
    <string name="get_started_message_sub">Enter your Twitch name in the settings. Don\'t forget to follow some channels on Twitch!</string>

    <!-- Settings screen -->
    <!-- Action bar button -->
    <string name="settings">Settings</string>
    <!-- Settings option to toggle dark mode -->
    <string name="dark_mode">Dark mode</string>
    <!-- Settings option to change user's name -->
    <string name="twitch_name">Twitch name</string>
    <!-- Settings option to change how vodcasts are displayed -->
    <string name="vodcast_display">Rerun display</string>
    <!-- Settings option to change sort by -->
    <string name="sort_by">Sort by</string>
    <!-- Settings option to change sort order -->
    <string name="sort_order">Sort order</string>
    <!-- Settings option for the list mode -->
    <string name="list_mode">List mode</string>

    <!-- Settings option to delete all of the user's set pins, also used for the positive confirmation button -->
    <string name="delete_pins">Unpin channels</string>
    <!-- Title of the delete pins confirmation dialog -->
    <string name="delete_pins_title">Unpin all channels</string>
    <!-- Warning message when deleting pins -->
    <string name="delete_pin_warning">Are you sure you want to unpin all channels?</string>

    <!-- Settings option to unfavorite user's favorited games, also used for the positive confirmation button -->
    <string name="unfavorite_games">Unfavorite games</string>
    <!-- Title of the unfavorite games confirmation dialog -->
    <string name="unfavorite_games_title">Unfavorite all games</string>
    <!-- Warning message when unfavoriting games -->
    <string name="unfavorite_games_warning">Are you sure you want to unfavorite all games?</string>

    <!-- Prompt to change user's name -->
    <string name="enter_username_prompt">Please enter your Twitch username.</string>
    <!-- Positive button for changing the user's name -->
    <string name="save">Save</string>
    <!-- Negative button for changing the user's name and for deleting pins -->
    <string name="cancel">Cancel</string>
    <!-- Fetch new follows data -->
    <string name="fetch_follows_title">Update follows</string>
    <string name="fetch_follows_description">The following list will be updated on the next automatic refresh.</string>
    <string name="fetch_follows_summary">Use this if you\'ve followed or unfollowed any streams recently.</string>
    <string name="fetch_follows_positive">Okay</string>
    <!-- Counter option -->
    <string name="counter_title">Following counter</string>
    <string name="counter_description">Shows a count of how many channels you are following and how many are online.</string>

    <!-- Pins at top option -->
    <string name="pins_at_top_title">Pinned channels at top</string>
    <string name="pins_at_top_description">Turn this off if you want pinned channels to be sorted normally.</string>

    <!-- Favorite games at top option -->
    <string name="favorites_at_top_title">Favorite games at top</string>
    <string name="favorites_at_top_description">Turn this off if you want favorited games to be sorted normally.</string>

    <!-- Long click popup window -->
    <string name="pin_channel">Pin %1$s</string>
    <string name="favorite_game">Favorite %1$s</string>

    <!-- Options for how to display vodcasts -->
    <string name="pref_label_vodcast_online">Online</string>
    <string name="pref_label_vodcast_online_tag">Online with tag</string>
    <string name="pref_label_vodcast_offline">Offline</string>

    <!-- Options to display for sort order -->
    <string name="pref_label_order_name">Streamer name</string>
    <string name="pref_label_order_game">Game name</string>
    <string name="pref_label_order_uptime">Uptime</string>
    <string name="pref_label_order_viewer_count">Viewer count</string>
    <string name="pref_label_order_ascending">Ascending</string>
    <string name="pref_label_order_descending">Descending</string>

    <!-- Options for list mode -->
    <string name="pref_label_list_mode_full">Full</string>
    <string name="pref_label_list_mode_compact">Compact</string>
    <string name="pref_label_list_mode_minimal">Minimal</string>

    <!-- SharedPreferences keys and values -->
    <string name="pref_username_key" translatable="false">username</string>
    <string name="pref_username_id_key" translatable="false">username_id</string>
    <string name="pref_vodcast_key" translatable="false">vodcast</string>
    <string name="pref_vodcast_online" translatable="false">online</string>
    <string name="pref_vodcast_online_tag" translatable="false">tag</string>
    <string name="pref_vodcast_offline" translatable="false">offline</string>
    <string name="pref_dark_mode" translatable="false">dark</string>
    <string name="pref_order_by_key" translatable="false">order_by_key</string>
    <string name="pref_order_ascending_key" translatable="false">order_ascending_key</string>
    <string name="pref_order_ascending" translatable="false">order_ascending</string>
    <string name="pref_order_descending" translatable="false">order_descending</string>
    <string name="pref_order_name" translatable="false">order_name</string>
    <string name="pref_order_game" translatable="false">order_game</string>
    <string name="pref_order_uptime" translatable="false">order_uptime</string>
    <string name="pref_order_viewer_count" translatable="false">order_viewer_count</string>
    <string name="last_updated" translatable="false">last_updated</string>
    <string name="need_follows_update_key" translatable="false">need_follows_update_key</string>
    <string name="pref_list_mode_key" translatable="false">list_mode_key</string>
    <string name="pref_list_mode_full" translatable="false">list_mode_full</string>
    <string name="pref_list_mode_compact" translatable="false">list_mode_compact</string>
    <string name="pref_list_mode_minimal" translatable="false">list_mode_minimal</string>
    <string name="pref_counter_key" translatable="false">pref_counter_key</string>
    <string name="pref_pins_at_top_key" translatable="false">pref_pins_at_top_key</string>
    <string name="pref_favorites_at_top_key" translatable="false">pref_favorites_at_top_key</string>

</resources>
