<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toggle dark mode -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_dark_mode"
        android:title="@string/dark_mode"/>

    <!-- Change user setting -->
    <!-- For some reason EditTextPreference does not honor the textColor
        of the current theme when the theme is changed at runtime, so it
        needs to be a single color for both themes. Purple works. -->
    <mseffner.twitchnotifier.settings.TrimmedEditTextPreference
        android:id="@+id/edit_text"
        android:inputType="text"
        android:key="@string/pref_username_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="?colorPrimary"
        android:title="@string/twitch_name"/>

    <!-- Rerun tag setting -->
    <ListPreference
        android:defaultValue="@string/pref_vodcast_online_tag"
        android:entries="@array/pref_vodcast_options"
        android:entryValues="@array/pref_vodcast_values"
        android:key="@string/pref_vodcast_key"
        android:title="@string/vodcast_display"/>

    <!-- List mode setting -->
    <ListPreference
        android:defaultValue="@string/pref_list_mode_full"
        android:entries="@array/pref_list_mode_options"
        android:entryValues="@array/pref_list_mode_values"
        android:key="@string/pref_list_mode_key"
        android:title="@string/list_mode"/>

    <!-- Sort by setting -->
    <ListPreference
        android:defaultValue="@string/pref_order_viewer_count"
        android:entries="@array/pref_order_by_options"
        android:entryValues="@array/pref_order_by_values"
        android:key="@string/pref_order_by_key"
        android:title="@string/sort_by"/>

    <!-- Sort order setting -->
    <ListPreference
        android:defaultValue="@string/pref_order_descending"
        android:entries="@array/pref_order_asc_desc_options"
        android:entryValues="@array/pref_order_asc_desc_values"
        android:key="@string/pref_order_ascending_key"
        android:title="@string/sort_order"/>

    <!-- Toggle follows counter -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_counter_key"
        android:summary="@string/counter_description"
        android:title="@string/counter_title"/>

    <!-- Toggle pins at top of list -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_pins_at_top_key"
        android:summary="@string/pins_at_top_description"
        android:title="@string/pins_at_top_title"/>

    <!-- Fetch new follows data setting -->
    <mseffner.twitchnotifier.settings.UpdateFollowsDialogPreference
        android:dialogMessage="@string/fetch_follows_description"
        android:dialogTitle="@string/fetch_follows_title"
        android:negativeButtonText="@string/cancel"
        android:persistent="false"
        android:positiveButtonText="@string/fetch_follows_positive"
        android:summary="@string/fetch_follows_summary"
        android:title="@string/fetch_follows_title"/>

    <!-- Clear pins button (not actually a preference) -->
    <mseffner.twitchnotifier.settings.ClearPinsDialogPreference
        android:dialogMessage="@string/delete_pin_warning"
        android:dialogTitle="@string/delete_pins_title"
        android:negativeButtonText="@string/cancel"
        android:persistent="false"
        android:positiveButtonText="@string/delete_pins"
        android:title="@string/delete_pins_title"/>

</PreferenceScreen>
