<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Channel logo -->
    <ImageView
        android:id="@+id/channel_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@drawable/default_logo_300x300"/>

    <!-- Channel information -->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <!-- Channel name -->
            <TextView
                android:id="@+id/channel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="Cirno_TV"/>

            <!-- Current game -->
            <TextView
                android:id="@+id/current_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?android:textColorSecondary"
                tools:ignore="RtlHardcoded"
                tools:text="Dark Souls" />

        </LinearLayout>

        <!-- Offline text -->
        <TextView
            android:id="@+id/offline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/offline"
            android:textAllCaps="true"
            android:textColor="?android:textColorSecondary"
            android:visibility="gone"/>

        <!-- Stream title -->
        <TextView
            android:id="@+id/stream_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?android:textColorSecondary"
            tools:text="Dark Souls All Bosses! I'm addicted to this route!"/>

        <!-- Viewer count, uptime, and vodcast tag -->
        <LinearLayout
            android:id="@+id/live_stream_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <!-- Current viewer count -->
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/viewer_count"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@color/viewerRed"
                tools:text="1512"/>

            <!-- Current uptime -->
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="2dp"
                android:scaleType="centerCrop"
                android:src="?attr/clock"
                tools:ignore="ContentDescription,RtlHardcoded"/>

            <TextView
                android:id="@+id/uptime"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorSecondary"
                tools:text="4:46"/>

            <!-- Vodcast tag -->
            <TextView
                android:id="@+id/vodcast_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/vodcast_tag_background"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/vodcast_tag"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:visibility="invisible"/>

        </LinearLayout>

    </RelativeLayout>

    <!-- Channel pin icon -->
    <ImageView
        android:id="@+id/pin_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/pin_icon"
        android:paddingLeft="8dp"
        android:paddingRight="2dp"
        android:src="@drawable/ic_pin_24dp"
        tools:ignore="RtlHardcoded" />

</LinearLayout>
